feat: implement project velocity system for task prioritization
Velocity System Implementation (Phase 5)
=========================================

OVERVIEW
--------
Implemented comprehensive project velocity scoring system that calculates dynamic task
priority scores based on inheritance, status, numerical multipliers, and blocking
relationships.

BACKEND
-------
- backend/core/velocity_engine.py (NEW)
  * VelocityEngine class with full calculation logic
  * Handles base scores, inheritance from parent hierarchy, status scores
  * Applies numerical field multipliers and blocking penalties
  * Includes cycle detection and internal caching
  * Methods: calculate_velocity(), calculate_all_velocities(), get_ranking()

- backend/api/velocity_routes.py (NEW)
  * Flask blueprint with 4 REST endpoints:
    - GET /sessions/{id}/velocity - All nodes ranked
    - GET /sessions/{id}/nodes/{id}/velocity - Single node
    - POST /sessions/{id}/nodes/{id}/blocking - Update blocking
    - GET /sessions/{id}/blocking-graph - All relationships
  * Full error handling and response formatting

FRONTEND - COMPONENTS
---------------------
- frontend/src/components/velocity/VelocityView.tsx (NEW)
  * Ranked list display showing all nodes by velocity score
  * Score breakdown visualization (Base, Inherited, Status, Numerical)
  * Blocking status indicators (Lock/Zap icons)
  * Auto-refresh every 5 seconds
  * Legend explaining score components

- frontend/src/components/velocity/NodeBlockingEditor.tsx (NEW)
  * Visual editor for creating/removing blocking relationships
  * Dual node selection (blocked, blocking)
  * Validation (no self-blocking, no duplicates)
  * Relationship list with delete functionality
  * Help text describing mechanics

FRONTEND - INTEGRATION
---------------------
- frontend/src/api/client.ts (MODIFIED)
  * Added TypeScript interfaces:
    - VelocityConfig, PropertyVelocityConfig
    - VelocityScore, BlockingRelationship
    - VelocityRanking
  * Added 4 velocity AP

--- a/assets/icons/catalog.yaml
+++ b/assets/icons/catalog.yaml
@@ -1,34 +1,37 @@
 icons:
-  - id: film
-    file: film.svg
-    description: "Cinematic film reel representing a project root"
-  - id: calendar-days
-    file: calendar-days.svg
-    description: "Calendar slab for season planning"
-  - id: video-camera
-    file: video-camera.svg
-    description: "Camera icon for episode-level work"
-  - id: clipboard-document-check
-    file: clipboard-document-check.svg
-    description: "Checklist symbol for task nodes"
-  - id: play-circle
-    file: play-circle.svg
-    description: "Play button for footage clips"
-  - id: map-pin
-    file: map-pin.svg
-    description: "Pin icon for location scouting"
-  - id: archive-box
-    file: archive-box.svg
-    description: "Archive box for inventory roots"
-  - id: camera
-    file: camera.svg
-    description: "Camera gear categories"
-  - id: cog
-    file: cog.svg
-    description: "Machine gear for car parts"
-  - id: clipboard-document-list
-    file: clipboard-document-list.svg
-    description: "List style clipboard used in other templates"
-  - id: truck
-    file: truck.svg
-    description: "Logistics/transport icon for future types"
+- id: film
+  file: film.svg
+  description: Cinematic film reel representing a project root
+- id: calendar-days
+  file: calendar-days.svg
+  description: Calendar slab for season planning
+- id: video-camera
+  file: video-camera.svg
+  description: Camera icon for episode-level work
+- id: clipboard-document-check
+  file: clipboard-document-check.svg
+  description: Checklist symbol for task nodes
+- id: play-circle
+  file: play-circle.svg
+  description: Play button for footage clips
+- id: map-pin
+  file: map-pin.svg
+  description: Pin icon for location scouting
+- id: archive-box
+  file: archive-box.svg
+  description: Archive box for inventory roots
+- id: camera
+  file: camera.svg
+  description: Camera gear categories
+- id: cog
+  file: cog.svg
+  description: Machine gear for car parts
+- id: clipboard-document-list
+  file: clipboard-document-list.svg
+  description: List style clipboard used in other templates
+- id: truck
+  file: truck.svg
+  description: Logistics/transport icon for future types
+- id: arrow-turn-left-down
+  file: arrow-turn-left-down.svg
+  description: Arrow with a turn pointing down to the left.
