--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -119,13 +119,13 @@ jobs:
           mkdir -p "${ARTIFACT_ROOT}"
 
           BACKEND_PATH="dist/talus-tally-backend"
+          BACKEND_DEST="${ARTIFACT_ROOT}/talus-tally-backend"
           TAURI_PATH="frontend/src-tauri/target/release/app"
-          EXT=""
+          TAURI_DEST="${ARTIFACT_ROOT}/talus-tally"
 
           if [[ "${{ matrix.target }}" == "windows" ]]; then
-            BACKEND_PATH="${BACKEND_PATH}.exe"
             TAURI_PATH="${TAURI_PATH}.exe"
-            EXT=".exe"
+            TAURI_DEST="${TAURI_DEST}.exe"
           fi
 
           copy_build_output() {
@@ -139,8 +139,8 @@ jobs:
             fi
           }
 
-          copy_build_output "${BACKEND_PATH}" "${ARTIFACT_ROOT}/talus-tally-backend${EXT}"
-          copy_build_output "${TAURI_PATH}" "${ARTIFACT_ROOT}/talus-tally${EXT}"
+          copy_build_output "${BACKEND_PATH}" "${BACKEND_DEST}"
+          copy_build_output "${TAURI_PATH}" "${TAURI_DEST}"
           cp -r frontend/dist "${ARTIFACT_ROOT}/frontend-dist"
 
           TAG_OR_SHA="${GITHUB_REF_NAME:-${GITHUB_SHA}}"
