Fixed Failing Tests and Updated Builds

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "desktop:dev": "tauri dev",
-    "desktop:build": "npm run build && tauri build",
+    "desktop:build": "tauri build",
+    "stage:resources": "node ../scripts/run_prepare_tauri_resources.mjs",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
